Add imperial gallon and US pint

Summary:
Adds imperial gallon and US pint as requested in a bug report.

BUG: 341072

Test Plan: I haven't figured out how to test the changes, so any directions are welcome. I've tried LD_PRELOAD with the compiled library when launching KRunner to no avail.

Reviewers: #frameworks, ngraham

Reviewed By: ngraham

Subscribers: bruns, ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D28995